src/assets/styles/globals.css
@import url('https://fonts.googleapis.com/css2?family=Cormorant:wght@400;700&family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap');


@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --whi: 236, 235, 235;
    --5whi: 236, 235, 235, 0.5;
    --dar: 22, 19, 16;
    --5dar: 22, 19, 16, 0.5;
    --background: 0 0% 100%;
    --foreground: 240 10% 3.9%;
    --border: 240 5.9% 90%;
    --input: 240 5.9% 90%;
    --ring: 240 10% 3.9%;
    --radius: 0.5rem;
    --primary: 240 5.9% 10%;
    --primary-foreground: 0 0% 98%;
    --secondary: 240 4.8% 95.9%;
    --secondary-foreground: 240 5.9% 10%;
    --accent: 240 4.8% 95.9%;
    --accent-foreground: 240 5.9% 10%;
    --muted: 240 4.8% 95.9%;
    --muted-foreground: 240 3.8% 46.1%;
    --popover: 0 0% 100%;
    --popover-foreground: 240 10% 3.9%;
    --destructive: 0 84.2% 60.2%;
    --destructive-foreground: 0 0% 98%;
    --chart-1: 12 76% 61%;
    --chart-2: 173 58% 39%;
    --chart-3: 197 37% 24%;
    --chart-4: 43 74% 66%;
    --chart-5: 27 87% 67%;
  }

  .dark {
    --whi: 22, 19, 16;
    --5whi: 22, 19, 16, 0.5;
    --dar: 236, 235, 235;
    --5dar: 236, 235, 235, 0.5;
    --background: 240 10% 3.9%;
    --foreground: 0 0% 98%;
    --border: 240 3.7% 15.9%;
    --input: 240 3.7% 15.9%;
    --ring: 240 4.9% 83.9%;
    --primary: 0 0% 98%;
    --primary-foreground: 240 5.9% 10%;
    --secondary: 240 3.7% 15.9%;
    --secondary-foreground: 0 0% 98%;
    --accent: 240 3.7% 15.9%;
    --accent-foreground: 0 0% 98%;
    --muted: 240 3.7% 15.9%;
    --muted-foreground: 240 5% 64.9%;
    --popover: 240 10% 3.9%;
    --popover-foreground: 0 0% 98%;
    --destructive: 0 62.8% 30.6%;
    --destructive-foreground: 0 0% 98%;
    --chart-1: 220 70% 50%;
    --chart-2: 160 60% 45%;
    --chart-3: 30 80% 55%;
    --chart-4: 280 65% 60%;
    --chart-5: 340 75% 55%;
  }
html, body, body * {
  transition:
    background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1),
    color 0.5s cubic-bezier(0.4, 0, 0.2, 1),
    border-color 0.5s cubic-bezier(0.4, 0, 0.2, 1),
    fill 0.5s cubic-bezier(0.4, 0, 0.2, 1);
}

}

*, *::before, *::after {
  box-sizing: border-box;
}

html, body {
  @apply w-full h-full overflow-x-visible m-0 p-0 bg-whi; /* Asegura que sticky funcione */
}


#root {
  @apply relative; /* No uses overflow-x-hidden aquí */
}




@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }
  *::-webkit-scrollbar {
    display: none;
  }
  * {
    -ms-overflow-style: none;
    scrollbar-width: none;
  }
}

.custom-title {
  font-size: 13vw;
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  text-align: center;
}

.custom-paragraph {
  font-size: 4vw; /* Ajusta según el tamaño del título */
  text-align: center;
  margin-top: 1rem;
  line-height: 1.2;
  white-space: nowrap;
  overflow: hidden;
}

.custom-contactme {
  font-size: 10vw;
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  text-align: center;
}

.custom-contactmail {
  font-size: 2.6vw;
  line-height: 1;
  white-space: nowrap;
  overflow: hidden;
  text-align: center;
}

